# kyuri

./: Cargo.toml  LICENSE  README.md
.github/workflows/: compiles.yml
examples/: bar.rs  download.rs  long.rs  progress.rs  thread.rs  tracing.rs
src/: lib.rs  template.rs  ticker.rs  writer.rs
src/termsize/: mod.rs  non.rs  unix.rs  windows.rs
