[package]
name = "kyuri"
version = "0.2.4"
edition = "2021"
description = "A very simple progress display library"
license = "MIT"
repository = "https://github.com/taoky/kyuri"
documentation = "https://docs.rs/kyuri"
readme = "README.md"
exclude = ["assets/*"]
categories = ["command-line-interface"]
keywords = ["progress", "progressbar", "cli"]
# IsTerminal trait requires 1.70
rust-version = "1.70"

[dependencies]
unicode-width = { version = "0.2.0", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
nix = { version = "0.29.0", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "fileapi", "wincon"], optional = true }

[dev-dependencies]
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
console_width = ["libc", "winapi"]
unicode = ["unicode-width"]
full = ["console_width", "unicode"]
